# acp-mux

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/acp-mux/: Cargo.toml  README.md
crates/acp-mux/src/: agent_config.rs  attach.rs  cli.rs  extension.rs  jsonrpc.rs  lib.rs  main.rs  replay_store.rs  server.rs
crates/acp-mux/src/agent/: process.rs
crates/acp-mux/src/mux/: actor.rs  mod.rs  registry.rs
crates/acp-mux/tests/: conformance.rs
crates/rooms/: Cargo.toml  README.md
crates/rooms-client/: Cargo.toml  README.md
crates/rooms-client/src/: connection.rs  lib.rs  protocol.rs  state.rs  transport.rs
crates/rooms-client/tests/: connection.rs  events.rs  protocol.rs  state.rs  transport.rs
crates/rooms-tui/: Cargo.toml  README.md
crates/rooms-tui/src/: cli.rs  events.rs  lib.rs  main.rs  protocol.rs  ui.rs
crates/rooms-tui/tests/: cli.rs  client_boundary.rs  controls.rs  events.rs  permissions.rs  protocol.rs  ui.rs
crates/rooms/src/: cli.rs  lib.rs  main.rs  server.rs
crates/rooms/src/agent/: mod.rs
crates/rooms/src/extension/: attach_views.rs  mod.rs  permissions.rs  presence.rs  queue.rs  segments.rs  turns.rs
crates/rooms/src/multiplex/: mod.rs
crates/rooms/src/protocol/: attach.rs  mod.rs  rooms.rs
crates/rooms/src/room/: mod.rs  registry.rs
crates/rooms/tests/: server.rs
docs/: client-migration-rfd533-attach.md  client-migration-v0.2-rooms.md
docs/design/: amux-namespace.md  bridge-namespace.md  core-rooms-refactor-plan.md  rooms-namespace.md  rooms.md
docs/examples/: agents.toml
docs/examples/client-contract/: README.md
docs/examples/client-contract/notifications/: amux-agent-request-opened.notification.json  amux-agent-request-resolved.notification.json  amux-peer-joined.notification.json  amux-peer-left.notification.json  amux-queue-item-added.notification.json  amux-queue-item-completed.notification.json  amux-queue-item-submitted.notification.json  amux-replay-complete.notification.json  amux-replay-started.notification.json  amux-segment-ended.notification.json  amux-segment-started.notification.json  amux-session-busy.notification.json  amux-session-context.notification.json  amux-turn-cancelled.notification.json  amux-turn-complete.notification.json  amux-turn-started.notification.json  rooms-agent-request-opened.notification.json  rooms-agent-request-resolved.notification.json  rooms-peer-joined.notification.json  rooms-peer-left.notification.json  rooms-queue-item-added.notification.json  rooms-queue-item-completed.notification.json  rooms-queue-item-submitted.notification.json  rooms-replay-complete.notification.json  rooms-replay-started.notification.json  rooms-segment-ended.notification.json  rooms-segment-started.notification.json  rooms-session-busy.notification.json  rooms-session-context.notification.json  rooms-turn-cancelled.notification.json  rooms-turn-complete.notification.json  rooms-turn-started.notification.json
docs/examples/client-contract/requests/: amux-cancel-active-turn.request.json  amux-queue-prompt.request.json  initialize.request.json  rooms-cancel-active-turn.request.json  rooms-queue-prompt.request.json  session-attach-full-lineage.request.json  session-attach-stream-newest-first.request.json  session-new.request.json  session-prompt.request.json
docs/examples/client-contract/responses/: session-attach-full-lineage.response.json
docs/examples/client-contract/sequences/: basic-turn.jsonl
docs/roadmaps/: rooms-tui-daily-driver.md
src/: cli.rs  lib.rs  main.rs  server.rs
src/agent/: mod.rs  process.rs  stderr.rs
src/multiplex/: subscriber.rs
src/protocol/: amux.rs  attach.rs  jsonrpc.rs  mod.rs  session_update.rs
src/room/: attach.rs  mod.rs  registry.rs  replay_store.rs  state.rs
src/session/: attach.rs  mod.rs  registry.rs  state.rs
tests/: server.rs
