[package]
name = "acp-mux"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "Multi-subscriber session-sharing proxy for the Agent Client Protocol (ACP). Lets multiple clients attach to one ACP agent session in real time."
license = "MIT"
repository = "https://github.com/lsaether/acp-mux"
homepage = "https://github.com/lsaether/acp-mux"
readme = "README.md"
keywords = ["acp", "agent", "multiplexer", "websocket", "proxy"]
categories = ["command-line-utilities", "web-programming::websocket"]

# The crate (and GitHub repo) is "acp-mux" but the installed binary is
# the shorter "amux". `src/bin/mock_acp.rs` is still auto-detected.
# The library exists so integration tests under `tests/` can use the
# server/registry/protocol modules without spawning the binary.
[lib]
name = "amux"
path = "src/lib.rs"

[[bin]]
name = "amux"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws", "macros"] }
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.8"
