[package]
name = "rooms-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "rooms_client"
path = "src/lib.rs"

[dependencies]
futures = "0.3.32"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
url = "2.5.8"
