[package]
name = "rooms-tui"
version = "0.1.0"
edition = "2024"

[lib]
name = "rooms_tui"
path = "src/lib.rs"

[[bin]]
name = "rooms-tui"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.1"
rooms-client = { path = "../rooms-client" }
