[package]
name = "rooms"
version = "0.1.3"
edition = "2024"

# `src/bin/mock_acp.rs` is auto-detected for the integration test fixture.
# The library exists so integration tests under `tests/` can use the
# server/registry/protocol modules without spawning the binary.
[lib]
name = "rooms"
path = "src/lib.rs"

[[bin]]
name = "rooms"
path = "src/main.rs"

[dependencies]
acp-mux = { path = "../acp-mux" }
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws", "macros"] }
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.8"
